@@ -1,6 +1,4 @@
 <?php
-
-
 /********************************************************************\
  * This program is free software; you can redistribute it and/or    *
  * modify it under the terms of the GNU General Public License as   *
@@ -148,4 +146,3 @@ $ui->setTitle(_("Generic object editor"));
 $ui->setMainContent($html);
 $ui->display();
 ?>
-
